--- a/deployment-scenarios/orchestra-cluster/values.yml
+++ b/deployment-scenarios/orchestra-cluster/values.yml
@@ -1,3 +1,9 @@
 orchestra:
   deployment:
     replicas: 3
+  metrics:
+    enabled: true
+    serviceMonitor:
+      enabled: true
+      labels:
+        release: kube-prometheus-stack
