--- a/hume-helm/templates/service-api.yml
+++ b/hume-helm/templates/service-api.yml
@@ -13,3 +13,23 @@ spec:
       name: api
   selector:
     app: {{ include "hume-helm.fullname" . }}-api
+---
+{{- if .Values.api.metrics.enabled }}
+apiVersion: v1
+kind: Service
+metadata:
+  name: {{ include "hume-helm.fullname" . }}-api-metrics
+  labels:
+    {{- include "hume.labels" . | nindent 4 }}
+    app.kubernetes.io/component: api-metrics
+spec:
+  type: {{ .Values.api.metrics.service.type }}
+  ports:
+    - port: {{ .Values.api.metrics.service.port }}
+      targetPort: {{ .Values.api.metrics.service.targetPort }}
+      protocol: TCP
+      name: metrics
+  selector:
+    app: {{ include "hume-helm.fullname" . }}-api
+{{- end }}
+---
