move api metrics to management port

--- a/deployment-scenarios/orchestra-cluster/values.yml
+++ b/deployment-scenarios/orchestra-cluster/values.yml
@@ -7,3 +7,10 @@ orchestra:
       enabled: true
       labels:
         release: kube-prometheus-stack
+api:
+  metrics:
+    enabled: true
+    serviceMonitor:
+      enabled: true
+      labels:
+        release: kube-prometheus-stack
