--- a/hume-helm/templates/deployment.yaml
+++ b/hume-helm/templates/deployment.yaml
@@ -104,17 +104,20 @@ spec:
             - name: api
               containerPort: 8080
               protocol: TCP
+            - name: metrics
+              containerPort: 7001
+              protocol: TCP
           livenessProbe:
             httpGet:
               path: /actuator/health
-              port: api
+              port: metrics
             initialDelaySeconds: {{ .Values.api.probes.livenessProbe.inititalDelaySeconds }}
             periodSeconds: {{ .Values.api.probes.livenessProbe.periodSeconds }}
             failureThreshold: {{ .Values.api.probes.livenessProbe.failureThreshold }}
           startupProbe:
             httpGet:
               path: /actuator/health
-              port: api
+              port: metrics
             initialDelaySeconds: {{ .Values.api.probes.startupProbe.inititalDelaySeconds }}
             periodSeconds: {{ .Values.api.probes.startupProbe.periodSeconds }}
             failureThreshold: {{ .Values.api.probes.startupProbe.failureThreshold }}
