--- a/hume-helm/templates/service-orchestra.yml
+++ b/hume-helm/templates/service-orchestra.yml
@@ -1,3 +1,4 @@
+{{- if .Values.orchestra.enabled -}}
 apiVersion: v1
 kind: Service
 metadata:
@@ -13,7 +14,9 @@ spec:
       name: orchestra
   selector:
     app: {{ include "hume-helm.fullname" . }}-orchestra
+{{- end }}
 ---
+{{- if .Values.orchestra.enabled -}}
 {{- if .Values.orchestra.metrics.enabled }}
 apiVersion: v1
 kind: Service
@@ -32,7 +35,9 @@ spec:
   selector:
     app: {{ include "hume-helm.fullname" . }}-orchestra
 {{- end }}
+{{- end }}
 ---
+{{- if .Values.orchestra.enabled -}}
 {{ range $podIndex := until (.Values.orchestra.deployment.replicas | int | default 1) -}}
 apiVersion: v1
 kind: Service
@@ -50,4 +55,5 @@ spec:
   selector:
     statefulset.kubernetes.io/pod-name: {{ include "hume-helm.fullname" $ }}-orchestra-{{ $podIndex }}
 ---
-{{ end -}}
+{{- end }}
+{{- end }}
