eventstore service monitor

--- a/deployment-scenarios/orchestra-cluster/values.yml
+++ b/deployment-scenarios/orchestra-cluster/values.yml
@@ -14,3 +14,12 @@ api:
       enabled: true
       labels:
         release: kube-prometheus-stack
+
+eventstore:
+  enabled: true
+  metrics:
+    enabled: true
+    serviceMonitor:
+      enabled: true
+      labels:
+        release: kube-prometheus-stack
