--- a/hume-helm/templates/orchestra-configmap.yaml
+++ b/hume-helm/templates/orchestra-configmap.yaml
@@ -9,9 +9,14 @@ metadata:
   {{ toYaml . | indent 4 }}
   {{- end }}
 data:
+  {{- if .Values.postgresqlOrchestra.enabled }}
   spring.datasource.url: "jdbc:postgresql://postgresql-orchestra:{{ .Values.postgresqlOrchestra.global.postgresql.auth.servicePort }}/{{ .Values.postgresqlOrchestra.global.postgresql.auth.database }}"
   spring.datasource.username: {{ .Values.postgresqlOrchestra.global.postgresql.auth.username }}
   spring.datasource.password: {{ .Values.postgresqlOrchestra.global.postgresql.auth.password }}
+  {{ else }}
+  spring.datasource.url: "jdbc:postgresql://{{ .Values.customOrchestraPostgresql.global.postgresql.auth.hostname }}:{{ .Values.customOrchestraPostgresql.global.postgresql.auth.servicePort }}/{{ .Values.customOrchestraPostgresql.global.postgresql.auth.database }}"
+  spring.datasource.username: {{ .Values.customOrchestraPostgresql.global.postgresql.auth.username }}
+  {{- end }}
   orchestra.storage.engine: db
   {{- if or (.Values.orchestra.cluster.enabled) (gt (.Values.orchestra.deployment.replicas | int | default 1) 1) }}
   orchestra.cluster.enabled: "true"
