--- a/hume-alerting/Chart.yaml
+++ b/hume-alerting/Chart.yaml
@@ -9,11 +9,13 @@ dependencies:
     version: 12.1.5
     repository: https://charts.bitnami.com/bitnami
     alias: postgresqlAlertingController
+    condition: postgresqlAlertingController.enabled
   - name: postgresql
     version: 12.1.5
     repository: https://charts.bitnami.com/bitnami
     alias: postgresqlAlertingOperator
+    condition: postgresqlAlertingOperator.enabled
   - name: kafka
-    version: 18.4.4
+    version: 22.1.4
     repository: https://charts.bitnami.com/bitnami
     condition: kafka.internal.enabled
