--- a/hume-alerting/templates/deployment.yaml
+++ b/hume-alerting/templates/deployment.yaml
@@ -33,7 +33,7 @@ spec:
         - name: {{ include "hume-alerting.fullname" . }}-controller
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
-          image: "{{ .Values.humeAlertingBaseRepository }}{{ .Values.controller.image.name }}:{{ .Values.controller.image.tag | default .Chart.AppVersion }}"
+          image: "{{ .Values.humeAlertingControllerBaseRepository }}{{ .Values.controller.image.name }}:{{ .Values.controller.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.controller.image.pullPolicy }}
           ports:
             - name: http
@@ -51,6 +51,13 @@ spec:
           env:
             {{- with .Values.controller.env }}
             {{- toYaml . | nindent 12 }}
+            {{- end }}
+            {{- if not .Values.postgresqlAlertingController.enabled }}
+            - name: spring.datasource.password
+              valueFrom:
+                secretKeyRef:
+                  name: {{ .Values.customAlertingControllerPostgresql.global.postgresql.secretRef.existingSecret }}
+                  key: {{ .Values.customAlertingControllerPostgresql.global.postgresql.secretRef.passwordSecretKey }}
             {{- end }}
           livenessProbe:
              httpGet:
@@ -113,7 +120,7 @@ spec:
         - name: {{ include "hume-alerting.fullname" . }}-operator
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
-          image: "{{ .Values.humeAlertingBaseRepository }}{{ .Values.operator.image.name }}:{{ .Values.operator.image.tag | default .Chart.AppVersion }}"
+          image: "{{ .Values.humeAlertingOperatorBaseRepository }}{{ .Values.operator.image.name }}:{{ .Values.operator.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.operator.image.pullPolicy }}
           ports:
             - name: http
@@ -131,6 +138,13 @@ spec:
           env:
             {{- with .Values.operator.env }}
             {{- toYaml . | nindent 12 }}
+            {{- end }}
+            {{- if not .Values.postgresqlAlertingOperator.enabled }}
+            - name: spring.datasource.password
+              valueFrom:
+                secretKeyRef:
+                  name: {{ .Values.customAlertingOperatorPostgresql.global.postgresql.secretRef.existingSecret }}
+                  key: {{ .Values.customAlertingOperatorPostgresql.global.postgresql.secretRef.passwordSecretKey }}
             {{- end }}
           livenessProbe:
              httpGet:
