--- a/hume-helm/Chart.yaml
+++ b/hume-helm/Chart.yaml
@@ -1,8 +1,8 @@
 apiVersion: v2
 name: hume
 home: https://www.graphaware.com
-version: "2.19.0-SNAPSHOT"
-appVersion: "2.19.0-SNAPSHOT"
+version: "0.0.1"
+appVersion: "0.0.1"
 type: application
 icon: https://s3.eu-west-1.amazonaws.com/www-graphaware-com.infra.graphaware.com/favicon.ico
 keywords:
@@ -31,13 +31,13 @@ dependencies:
       version: 13.1.1
       repository: https://charts.bitnami.com/bitnami
       alias: keycloak
-      condition: keycloak.enabled
+      condition: keycloak.internal.enabled
     - name: neo4j-standalone
       version: "4.4.17"
       repository: "https://helm.neo4j.com/neo4j"
       condition: neo4j.enabled
       alias: neo4j
     - name: hume-alerting
-      version: "2.18.0-SNAPSHOT"
+      version: "0.0.1"
       repository: "https://docker.graphaware.com/chartrepo/public" 
       condition: alerting.enabled
