--- a/hume-helm/templates/orchestra-statefulset.yml
+++ b/hume-helm/templates/orchestra-statefulset.yml
@@ -1,3 +1,4 @@
+{{- if .Values.orchestra.cluster.enabled -}}
 {{- if .Values.orchestra.enabled -}}
 apiVersion: apps/v1
 kind: StatefulSet
@@ -90,4 +91,5 @@ spec:
     {{- with .Values.orchestra.volumeClaimTemplates }}
     {{- toYaml . | nindent 4 }}
     {{- end }}
+{{- end }}
 {{- end }}
