--- a/hume-helm/templates/orchestra-statefulset.yml
+++ b/hume-helm/templates/orchestra-statefulset.yml
@@ -1,4 +1,3 @@
-{{- if .Values.orchestra.cluster.enabled -}}
 {{- if .Values.orchestra.enabled -}}
 apiVersion: apps/v1
 kind: StatefulSet
@@ -67,6 +66,16 @@ spec:
             - configMapRef:
                 name: {{ include "hume-helm.fullname" . }}-orchestra-configmap
           env:
+            {{- if .Values.orchestra.cluster.enabled -}}
+            - name: orchestra.cluster.enabled
+              value: true
+            - name: orchestra.cluster.nodes.active.number
+              value: {{ .Values.orchestra.deployment.replicas | int | default 1 }}
+            - name: orchestra.cluster.node.id
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.name
+            {{- end }}
             {{- with .Values.orchestra.env }}
             {{- toYaml . | nindent 12 }}
             {{- end }}
@@ -91,5 +100,4 @@ spec:
     {{- with .Values.orchestra.volumeClaimTemplates }}
     {{- toYaml . | nindent 4 }}
     {{- end }}
-{{- end }}
 {{- end }}
