--- a/hume-helm/values.yaml
+++ b/hume-helm/values.yaml
@@ -50,17 +50,11 @@ fullnameOverride: "hume"
 
 ### Application based parameters ###
 keycloak:
-  # See https://github.com/bitnami/charts/tree/master/bitnami/keycloak for subchart settings
-  # Whether to use Keycloak
-  useKeycloak:
-    enabled: false
-  # When enabled the chart will install internal Bitnami Keycloak, when false means use custom Keycloak endpoint
-  internal:
-    enabled: false
-  customKeycloak:
-    customKeycloakEndpoint: ""
-  realm: ""
-  client: ""
+  # see https://github.com/bitnami/charts/tree/master/bitnami/keycloak
+  # for subchart settings
+  enabled: false
+  realm: hume
+  client: "hume-web"
   fullnameOverride: hume-keycloak
   service:
     type: ClusterIP
@@ -297,7 +291,6 @@ hume-alerting:
     global:
       postgresqlPassword: ""
 postgresqlCore:
-  # When enabled the chart will install internal Bitnami PostgreSQL chart otherwise it is using custom DB endpoint
   enabled: true
   global:
     postgresql:
@@ -307,18 +300,6 @@ postgresqlCore:
         password: hume
         servicePort: 5432
   fullnameOverride: *postgresql_core_reference
-customApiPostgresql:
-  global:
-    postgresql:
-      auth:
-        database: ""
-        hostname: ""
-        username: ""
-        servicePort: 5432
-      secretRef:
-        existingSecret: ""
-        passwordSecretKey: ""
-# When enabled the chart will install internal Bitnami PostgreSQL chart otherwise it is using custom DB endpoint
 postgresqlOrchestra:
   enabled: true
   global:
@@ -329,20 +310,8 @@ postgresqlOrchestra:
         password: pgsqls3cr3t
         servicePort: 5432
   fullnameOverride: *postgresql_orchestra_reference
-customOrchestraPostgresql:
-  global:
-    postgresql:
-      auth:
-        database: ""
-        hostname: ""
-        username: ""
-        servicePort: 5432
-      secretRef:
-        existingSecret: ""
-        passwordSecretKey: ""
-# When enabled the chart will install internal Bitnami PostgreSQL chart otherwise is using custom DB endpoint
 postgresqlEventStore:
-  enabled: true
+  enabled: false
   global:
     postgresql:
       auth:
@@ -351,17 +320,6 @@ postgresqlEventStore:
         password: eventstore
         servicePort: 5432
   fullnameOverride: *postgresql_eventstore_reference
-customEventstorePostgresql:
-  global:
-    postgresql:
-      auth:
-        database: ""
-        hostname: ""
-        username: ""
-        servicePort: 5432
-      secretRef:
-        existingSecret: ""
-        passwordSecretKey: ""
 ### RBAC parameters
 serviceAccount:
   # Specifies whether a service account should be created
