--- a/hume-alerting/values.yaml
+++ b/hume-alerting/values.yaml
@@ -3,8 +3,7 @@
 # Declare variables to be passed into your templates.
 
 replicaCount: 1
-humeAlertingControllerBaseRepository: "docker.graphaware.com/internal/"
-humeAlertingOperatorBaseRepository: "docker.graphaware.com/internal/"
+humeAlertingBaseRepository: "docker.graphaware.com/hume-alerting/"
 humeMessagingProvider: "kafka"
 
 kafka:
@@ -99,10 +98,10 @@ operator:
     #       name: alerting-operator-postgres-db-username
 
 imagePullSecrets:
-  - name: image-pull-secret
+  - name: graphaware-docker-creds
 
 nameOverride: ""
-fullnameOverride: ""
+fullnameOverride: "alerting"
 
 postgresql-alerting-controller-reference: &postgresql_alerting_controller_reference postgresql-alerting-controller
 postgresql-alerting-operator-reference: &postgresql_alerting_operator_reference postgresql-alerting-operator
@@ -134,7 +133,7 @@ service:
   port: 80
 
 ingress:
-  enabled: false
+  ed: false
   className: ""
   annotations: {}
     # kubernetes.io/ingress.class: nginx
@@ -175,7 +174,6 @@ tolerations: []
 affinity: {}
 
 postgresqlAlertingController:
-  enabled: true
   global:
     postgresql:
       auth:
@@ -184,20 +182,8 @@ postgresqlAlertingController:
         password: controller-password
         servicePort: 5432
   fullnameOverride: *postgresql_alerting_controller_reference
-customAlertingControllerPostgresql:
-  global:
-    postgresql:
-      auth:
-        database: ""
-        hostname: ""
-        username: ""
-        servicePort: 5432
-      secretRef:
-        existingSecret: ""
-        passwordSecretKey: ""
 
 postgresqlAlertingOperator:
-  enabled: true
   global:
     postgresql:
       auth:
@@ -206,14 +192,4 @@ postgresqlAlertingOperator:
         password: operator-password
         servicePort: 5432
   fullnameOverride: *postgresql_alerting_operator_reference
-customAlertingOperatorPostgresql:
-  global:
-    postgresql:
-      auth:
-        database: ""
-        hostname: ""
-        username: ""
-        servicePort: 5432
-      secretRef:
-        existingSecret: ""
-        passwordSecretKey: ""
+
