--- a/hume-helm/templates/api-configmap.yaml
+++ b/hume-helm/templates/api-configmap.yaml
@@ -11,14 +11,9 @@ metadata:
   {{- end }}
 data:
   management.server.port: "7001"
-  {{- if .Values.postgresqlCore.enabled }}
   spring.datasource.url: "jdbc:postgresql://postgresql-core:{{ .Values.postgresqlCore.global.postgresql.auth.servicePort }}/{{ .Values.postgresqlCore.global.postgresql.auth.database }}"
   spring.datasource.username: {{ .Values.postgresqlCore.global.postgresql.auth.username }}
   spring.datasource.password: {{ .Values.postgresqlCore.global.postgresql.auth.password }}
-  {{ else }}
-  spring.datasource.url: "jdbc:postgresql://{{ .Values.customApiPostgresql.global.postgresql.auth.hostname }}:{{ .Values.customApiPostgresql.global.postgresql.auth.servicePort }}/{{ .Values.customApiPostgresql.global.postgresql.auth.database }}"
-  spring.datasource.username: {{ .Values.customApiPostgresql.global.postgresql.auth.username }}
-  {{- end }}
   hume.orchestra.uri: "http://{{ include "hume-helm.fullname" . }}-orchestra:{{ .Values.orchestra.port }}"
   hume.driver.neo4j.transaction.timeout: "{{ .Values.api.neo4j.driver.transaction.timeout }}"
   {{- if .Values.api.features.mde }}
@@ -30,21 +25,19 @@ data:
   hume.eventstore.username: "{{ .Values.eventstore.username }}"
   hume.eventstore.password: "{{ .Values.eventstore.password }}"
   {{- end }}
-  {{- if .Values.keycloak.useKeycloak.enabled }}
+  {{- if .Values.keycloak.enabled }}
   hume.security.provider: 'keycloak'
+  {{- if .Values.ingress.enabled }}
+  keycloak.auth-server-url: "{{ .Values.ingress.protocol.scheme }}://{{ .Values.keycloak.app.name }}.{{ required "Missing required baseDomain parameter!" .Values.baseDomain }}"
+  {{ else }}
+  keycloak.auth-server-url: "http://localhost:{{ .Values.keycloak.service.ports.http }}"
+  {{ end }}
   keycloak.realm: {{ .Values.keycloak.realm }}
   keycloak.resource: {{ .Values.keycloak.client }}
   keycloak.public-client: 'true'
   keycloak.principal-attribute: 'preferred_username'
   keycloak.use-resource-role-mappings: 'true'
   keycloak.enabled: 'true'
-  {{- if not .Values.keycloak.internal.enabled }}
-  keycloak.auth-server-url: "{{ .Values.ingress.protocol.scheme }}://{{ .Values.keycloak.customKeycloak.customKeycloakEndpoint }}"
-  {{- else if and .Values.keycloak.internal.enabled .Values.ingress.enabled }}
-  keycloak.auth-server-url: "{{ .Values.ingress.protocol.scheme }}://{{ .Values.keycloak.app.name }}{{ .Values.ingress.appNameSuffix }}.{{ required "Missing required baseDomain parameter!" .Values.baseDomain }}"
-  {{- else }}
-  keycloak.auth-server-url: "http://localhost:{{ .Values.keycloak.service.ports.http }}"
-  {{- end }}
   {{- end }}
   {{- if .Values.alerting.enabled }}
   hume.feature.alerts.enabled: 'true'
