orchestra-cluster support

--- a/hume-helm/templates/orchestra-statefulset.yml
+++ b/hume-helm/templates/orchestra-statefulset.yml
@@ -66,6 +66,16 @@ spec:
             - configMapRef:
                 name: {{ include "hume-helm.fullname" . }}-orchestra-configmap
           env:
+            {{- if .Values.orchestra.cluster.enabled -}}
+            - name: orchestra.cluster.enabled
+              value: true
+            - name: orchestra.cluster.nodes.active.number
+              value: {{ .Values.orchestra.deployment.replicas | int | default 1 }}
+            - name: orchestra.cluster.node.id
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.name
+            {{- end }}
             {{- with .Values.orchestra.env }}
             {{- toYaml . | nindent 12 }}
             {{- end }}
