--- a/hume-helm/templates/orchestra-statefulset.yml
+++ b/hume-helm/templates/orchestra-statefulset.yml
@@ -66,7 +66,7 @@ spec:
             - configMapRef:
                 name: {{ include "hume-helm.fullname" . }}-orchestra-configmap
           env:
-            {{- if .Values.orchestra.cluster.enabled -}}
+            {{- if .Values.orchestra.cluster.enabled }}
             - name: orchestra.cluster.enabled
               value: true
             - name: orchestra.cluster.nodes.active.number
