fixed orchestra clustering config

--- a/hume-helm/templates/orchestra-statefulset.yml
+++ b/hume-helm/templates/orchestra-statefulset.yml
@@ -68,9 +68,9 @@ spec:
           env:
             {{- if .Values.orchestra.cluster.enabled }}
             - name: orchestra.cluster.enabled
-              value: true
+              value: "true"
             - name: orchestra.cluster.nodes.active.number
-              value: {{ .Values.orchestra.deployment.replicas | int | default 1 }}
+              value: {{ .Values.orchestra.deployment.replicas | int | default 1 | quote}}
             - name: orchestra.cluster.node.id
               valueFrom:
                 fieldRef:
