--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,10 +15,14 @@ upload-chart:
     - helm plugin install https://github.com/chartmuseum/helm-push
     - export HARBOR_USERNAME='robot$imagepull-secret-shared'
     - helm repo add --username $HARBOR_USERNAME --password $HARBOR_PASSWORD ga-public https://docker.graphaware.com/chartrepo/public
+    - helm lint hume-alerting
+    - helm template hume-alerting -f hume-alerting/values.yaml
     - helm dependency update hume-alerting
     - helm package hume-alerting
     - helm cm-push hume-alerting-*.tgz ga-public
     - rm -f hume-alerting-*.tgz
+    - helm lint hume-helm
+    - helm template hume-helm -f hume-helm/values.yaml
     - helm dependency update hume-helm
     - helm package hume-helm
     - ls -la
