--- a/hume-alerting/Chart.yaml
+++ b/hume-alerting/Chart.yaml
@@ -2,8 +2,8 @@ apiVersion: v2
 name: hume-alerting
 description: A Helm chart for Kubernetes
 type: application
-version: "2.19.0-SNAPSHOT"
-appVersion: "2.19.0-SNAPSHOT"
+version: "0.0.4"
+appVersion: "2.20.0-SNAPSHOT"
 dependencies:
   - name: postgresql
     version: 12.1.5
