--- a/hume-alerting/templates/service.yaml
+++ b/hume-alerting/templates/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "hume-alerting.fullname" . }}
+  name: {{ include "hume-alerting.fullname" . }}-controller
   labels:
     {{- include "hume-alerting.labels" . | nindent 4 }}
 spec:
