--- a/hume-alerting/Chart.yaml
+++ b/hume-alerting/Chart.yaml
@@ -2,18 +2,21 @@ apiVersion: v2
 name: hume-alerting
 description: A Helm chart for Kubernetes
 type: application
-version: "2.19.0-SNAPSHOT"
-appVersion: "2.19.0-SNAPSHOT"
+icon: https://s3.eu-west-1.amazonaws.com/www-graphaware-com.infra.graphaware.com/favicon.ico
+version: "2.19.1"
+appVersion: "2.19.1"
 dependencies:
   - name: postgresql
     version: 12.1.5
     repository: https://charts.bitnami.com/bitnami
     alias: postgresqlAlertingController
+    condition: postgresqlAlertingController.enabled
   - name: postgresql
     version: 12.1.5
     repository: https://charts.bitnami.com/bitnami
     alias: postgresqlAlertingOperator
+    condition: postgresqlAlertingOperator.enabled
   - name: kafka
-    version: 18.4.4
+    version: 22.1.4
     repository: https://charts.bitnami.com/bitnami
     condition: kafka.internal.enabled
