--- a/hume-helm/templates/orchestra-statefulset.yml
+++ b/hume-helm/templates/orchestra-statefulset.yml
@@ -65,6 +65,10 @@ spec:
           envFrom:
             - configMapRef:
                 name: {{ include "hume-helm.fullname" . }}-orchestra-configmap
+            {{- if .Values.orchestra.additionalSecretsStore }}
+            - secretRef:
+                name: {{ .Values.orchestra.additionalSecretsStore }}
+            {{- end }}
           env:
             {{- if .Values.orchestra.cluster.enabled }}
             - name: orchestra.cluster.enabled
