--- a/hume-alerting/values.yaml
+++ b/hume-alerting/values.yaml
@@ -51,6 +51,7 @@ controller:
   image: 
     name: "hume-alerting-controller"
     tag: ""
+  additionalSecretsStore: ""
   deployment:
     replicas: ""
   logging_format: "json"
@@ -78,6 +79,7 @@ operator:
     tag: ""
   logging_format: "json"
   maxTransactionRetry: 0
+  additionalSecretsStore: ""
   connectionAcquisitionTimeoutSeconds: 3
   connectionTimeoutSeconds: 3
   maxPollRecords: 1
